corrected a css issue with max height cutting off my page scrolling

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,11 +65,6 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-  html, body, #root {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
 }
 @tailwind base;
 @tailwind components;
